test/syc/bad/longvalist.c
/*
 * Both long and __va_list specifier
 */

long __va_list a;
